@@ -175,4 +175,6 @@ jgs //    /
 25 Feb, 2019   'new tooltip and translation corrections'
                - Added new tranlsation to the po file
                - Some translations are corrected (in po file and in Repository)
-
+25 Feb, 2019   'testing in PHP 5.5'
+               - empty function does not work in old PHP. I changed to a more stable function. 
+   
